--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   background-color: #3a3a3a;
 }
 
-img{
+*{
   image-rendering: pixelated;
 }
 
@@ -136,4 +136,22 @@ a:active{
   position: absolute;
 }
 
+.inventory-slot{
+  height: 75px;
+  width: 75px;
+  margin: 5px;
+  position: relative;
+  background: url("textures/ui/common_slot.png");
+  background-size: 75px;
+}
+
+.item-slot-image{
+  height: 75px;
+  width: 75px;
+  margin: 5px;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  top: 20px;
+}
 
